añadido descuento a ticket